--- a/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
@@ -5,7 +5,7 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
 
-<h1>Koha Administration</h1>
+<h1>Koha &rsaquo; System Administration</h1>
 
 <table>
 <caption>System Preferences</caption>
@@ -80,7 +80,7 @@
 </tr>
 
 <tr>
-<th colspan="2">Various parameters</th>
+<th colspan="2">Additional parameters</th>
 </tr>
 <tr>
 	<td><a href="/cgi-bin/koha/admin/printers.pl">Printers</a></td>
