--- a/koha-tmpl/intranet-tmpl/prog/en/admin/systempreferences.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/systempreferences.tmpl
@@ -144,16 +144,16 @@
     <h1>System preferences admin</h1>
     <div id="action">
         <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Admin">Admin</a>
-        <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=LOGFeatures">Log Features</a>
         <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Acquisitions">Acquisitions</a>
         <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Authorities">Authorities</a>
         <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Catalogue">Catalogue</a>
         <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Circulation">Circulation</a>
-        <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Members">Members</a>
+        <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Members">Borrowers</a>
         <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=OPAC">OPAC</a>
         <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=OPACFeatures">OPAC Features</a>
-        <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Intranet">Intranet</a>
-        <a href="/cgi-bin/koha/admin/systempreferences.pl?">Others</a>
+        <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=Intranet">Staff Client</a>
+        <a href="/cgi-bin/koha/admin/systempreferences.pl?tab=LOGFeatures">Logs</a>
+        <a href="/cgi-bin/koha/admin/systempreferences.pl?">Other</a>
     </div>
     <h2>Editing preferences for <!-- TMPL_VAR name="tab" --> module</h2>
     <!-- TMPL_VAR NAME="searchfield" -->
@@ -177,7 +177,7 @@
     
     <form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
         <input type="hidden" name="op" value="add_form" />
-        <input type="submit" value="Add a System Preference" />
+        <input type="submit" value="Add a new System Preference" />
     </form>
     
     <!-- /TMPL_IF -->
