--- a/koha-tmpl/intranet-tmpl/prog/en/tools/tools-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/tools-home.tmpl
@@ -23,11 +23,11 @@
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/import.pl">Reservoir Import</a></td>
-    <td>Import data into the reservoir</td>
+    <td>Import data into the reservoir.</td>
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/koha-news.pl">News</a></td>
-    <td>Write news for OPAC &amp; staff interfaces</td>
+    <td>Write news for the OPAC and staff interfaces.</td>
 </tr>
 <tr>
     <td><a href="/cgi-bin/koha/tools/letter.pl">Letters</a></td>
