Bug Fixing : - new authoritiessearch API (without $dbh) - new search API (using ccl)

--- a/koha-tmpl/opac-tmpl/prog/en/opac-authoritiessearchresultlist.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-authoritiessearchresultlist.tmpl
@@ -49,7 +49,7 @@
 						</td>
 					<!-- TMPL_UNLESS name="isEDITORS" -->
 						<td>
-							 <a href="/cgi-bin/koha/opac-search.pl?type=opac&amp;op=do_search&amp;marclist=<!-- TMPL_VAR NAME="biblio_fields" -->&amp;operator==&amp;value=<!-- TMPL_VAR NAME="authid" -->&amp;and_or=and&amp;excluding="><!-- TMPL_VAR NAME="used" --> biblios</a>
+							 <a href="/cgi-bin/koha/opac-search.pl?type=opac&amp;op=do_search&amp;q=an=<!--TMPL_VAR Name="authid" -->" class="button authority"><!-- TMPL_VAR NAME="used" --> biblios</a>
 						</td>
 					<!-- /TMPL_UNLESS -->
 						<td>
