--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/addbooks.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/addbooks.tmpl
@@ -51,9 +51,6 @@
     <table>
     <tr>
        <th>Title</th>
-       <th>Author</th>
-       <th>publisher</th>
-       <th>Publication year</th>
     </tr>
     <!-- TMPL_LOOP NAME="resultsloop" -->
         <tr>
@@ -61,19 +58,25 @@
                 <a href="/cgi-bin/koha/cataloguing/addbiblio.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">
                     <!-- TMPL_VAR NAME="title" -->
                 </a>
-                <br />
-                <small><!-- TMPL_VAR NAME="subtitle" --></small>
-            </td>
-            <td>
-                <!-- TMPL_VAR NAME="author" -->
-            </td>
-            <td>
-                <!-- TMPL_VAR NAME="publishercode" -->
-            </td>
-            <td>
-                <!-- TMPL_VAR NAME="publicationyear" -->
-            </td>
-        </tr>
+                <!-- TMPL_IF name="summary" -->
+                    <p><!-- TMPL_VAR name="summary" --></p>
+                <!-- TMPL_ELSE -->
+                    <p>
+                        <!-- TMPL_IF NAME="author" -->
+                            <!-- TMPL_VAR NAME="author" -->
+                        <!-- TMPL_ELSE -->
+                            &nbsp;
+                        <!-- /TMPL_IF -->
+                        <!-- TMPL_IF name="publicationyear" --> - <!-- TMPL_VAR name="publicationyear" --><!-- /TMPL_IF -->
+                        <!-- TMPL_IF name="publishercode" -->- <!-- TMPL_VAR name="publishercode" --><!-- /TMPL_IF -->
+                        <!-- TMPL_IF name="place" --> ; <!-- TMPL_VAR name="place" --><!-- /TMPL_IF -->
+                        <!-- TMPL_IF name="pages" --> - <!-- TMPL_VAR name="pages" --><!-- /TMPL_IF -->
+                        <!-- TMPL_IF name="notes" --> : <!-- TMPL_VAR name="notes" --><!-- /TMPL_IF -->
+                        <!-- TMPL_IF name="size" --> ; <!-- TMPL_VAR name="size" --><!-- /TMPL_IF -->
+                        <!-- TMPL_IF name="timestamp" --> <i>(modified on <!-- TMPL_VAR name="timestamp" -->)</i><!-- /TMPL_IF -->
+                    </p>
+                <!-- /TMPL_IF -->
+</tr>
     <!-- /TMPL_LOOP -->
     </table>
 </div>
@@ -90,7 +93,6 @@
         <table>
             <tr>
                 <th>Title</th>
-                <th>Author</th>
                 <th>ISBN</th>
                 <th>coming from</th>
                 <th>&nbsp;</th>
@@ -98,8 +100,8 @@
             </tr>
             <!-- TMPL_LOOP NAME="breeding_loop" -->
             <!-- TMPL_IF NAME="toggle" --><tr><!-- TMPL_ELSE --><tr class="hilighted"><!-- /TMPL_IF -->
-                <td><!-- TMPL_VAR NAME="title" --></a>
-                <td><!-- TMPL_VAR NAME="author" --></td>
+                <td><!-- TMPL_VAR NAME="title" -->
+                <!-- TMPL_VAR NAME="author" --></td>
                 <td><!-- TMPL_VAR NAME="isbn" --></td>
                 <td><!-- TMPL_VAR NAME="file" --></td>
                 <!-- TMPL_IF NAME="NOTMARC" -->
