--- a/koha-tmpl/intranet-tmpl/prog/en/admin/finesrules.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/finesrules.tmpl
@@ -5,13 +5,14 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
 
-	<h1>Defining <!-- TMPL_IF NAME="branch" -->issuing rules for <!-- TMPL_VAR NAME="branch" --><!-- TMPL_ELSE -->default issuing rules<!-- /TMPL_IF --></h1>
+	<h1>Defining <!-- TMPL_IF NAME="branch" -->fining rules for <!-- TMPL_VAR NAME="branch" --><!-- TMPL_ELSE -->default fining rules<!-- /TMPL_IF --></h1>
+		
 	<div class="help">
-		<h3>HINT for issues</h3>
-		<p>Each box needs to be filled in with issuelength,maxissues</p>
-		<p>eq 21,5</span> enables 5 issues for 21 days</p>
+		<h3>HINT for fines</h3>
+		<p>Each box needs to be filled in with fine,time to start charging,charging cycle</p>
+		<p>eg 1,7,7</span> = 1 [USD,EUR,etc] fine after 7 days, every 7 days</p>
+		<p>Fines are calculated by the fines2.pl script, located in misc directory.  Ask your administrator to put this script in crontab, after midnight, to have fines calculated every night</p>
 	</div>
-
 	<div class="help">
 		<h3>Default values</h3>
 		<p> If a cell is not filled, the 1st of the following value is searched :</p>
@@ -19,11 +20,12 @@
 			<li>same branch and same borrower category, itemtype *</li>
 			<li>same branch and same itemtype, borrower category *</li>
 			<li>same itemtype and borrower category, branch *</li>
-			<li>everywhere</li>
-			<li>If nothing is set, default is 21,5 (hardcoded)</li>
+			<li>branch * and itemtype *, same borrower category</li>
+			<li>branch * and borrower category *, same itemtype </li>
+			<li>branch * and borrower category *, itemtype *</li>
 		</ul>
-	</div>
-		<form method="post" action="/cgi-bin/koha/admin/issuingrules.pl">
+	
+		<form method="post" action="/cgi-bin/koha/admin/finesrules.pl">
 		<label for="branch">Select a branch :</label>
 			<select id="branch" name="branch">
 				<option value="">Default</option>
@@ -31,12 +33,12 @@
 				<option value="<!-- TMPL_VAR NAME="value" -->"<!-- TMPL_IF NAME="selected" --> selected="selected"<!-- /TMPL_IF -->><!-- TMPL_VAR NAME="branchname" --></option><!-- /TMPL_LOOP --></select>
 			<input type="submit" value="Select" />
 		</form>
-		<form method="post" action="/cgi-bin/koha/admin/issuingrules.pl">
+		<form method="post" action="/cgi-bin/koha/admin/finesrules.pl">
 			<input type="hidden" name="op" value="save" />
 			<input type="hidden" name="branch" value="<!-- TMPL_VAR NAME="branch" -->" />
 			
 			<table>
-			<caption>Defining issuing rules for <!-- TMPL_VAR NAME="branch" --></caption>
+			<caption>Defining fines rules for <!-- TMPL_VAR NAME="branch" --></caption>
 			<tr>
 				<th>&nbsp;</th><!-- TMPL_LOOP NAME="title" --><th scope="col"><!-- TMPL_VAR NAME="in_title" --></th><!-- /TMPL_LOOP -->
 			</tr>
@@ -45,7 +47,7 @@
 					<th><!-- TMPL_VAR NAME="categorycode" --></th>
 					<!-- TMPL_LOOP NAME="cell" -->
 						<td<!-- TMPL_IF NAME="toggle" --> class="highlight"<!-- /TMPL_IF -->>
-							<input name="<!-- TMPL_VAR NAME="issuingname" -->" value="<!-- TMPL_VAR NAME="issuingvalue" -->" size="6" maxlength="10" />
+							<input name="<!-- TMPL_VAR NAME="finesname" -->" value="<!-- TMPL_VAR NAME="finesvalue" -->" size="6" maxlength="10" />
 						</td>
 					<!-- /TMPL_LOOP -->
 				</tr>
