--- a/koha-tmpl/intranet-tmpl/prog/en/reports/issues_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/issues_stats.tmpl
@@ -12,225 +12,231 @@
 
 
 <!-- TMPL_IF NAME="do_it" -->
-	<!-- TMPL_LOOP NAME="mainloop" -->
-		<h1>Issues statistics </h1>
-		<!-- TMPL_IF NAME="loopfilter"-->
-			<p>Filtered on</p>
-			<!-- TMPL_LOOP NAME="loopfilter" -->
-					<p><!-- TMPL_IF NAME="err" -->  <!--/TMPL_IF --> <!-- TMPL_VAR NAME="crit"--> =<!-- TMPL_VAR NAME="filter"--><!-- TMPL_IF NAME="err" -->  <!--/TMPL_IF --></p>
-			<!-- /TMPL_LOOP -->
-		<!-- /TMPL_IF NAME="loopfilter"-->
-		
-		<table> 
-			<tr >
-				<th><!-- TMPL_VAR name="line" --> / <!-- TMPL_VAR name="column" --></th>
-				<!-- TMPL_LOOP NAME="loopcol" -->
-					<th><!-- TMPL_VAR NAME="coltitle" --></th>
-				<!-- /TMPL_LOOP -->
-				<th>TOTAL</th>
-			</tr>
-				<!-- TMPL_LOOP NAME="looprow" -->
-					<tr>
-						<!-- TMPL_IF NAME="hilighted" --><td class="hilighted"><!-- TMPL_ELSE --><td><!-- /TMPL_IF -->
-						<!-- TMPL_VAR NAME="rowtitle" --></td>
-						<!-- TMPL_LOOP NAME="loopcell" -->
-							<!-- TMPL_IF NAME="hilighted" --><td><!-- TMPL_ELSE --><td><!-- /TMPL_IF -->
-								<!-- TMPL_IF NAME="value" --><!-- TMPL_VAR NAME="value" -->
-								<!-- TMPL_ELSE --> &nbsp;
-								<!-- /TMPL_IF -->
-							</td>
-						<!-- /TMPL_LOOP -->
-						<!-- TMPL_IF NAME="hilighted" --><td><!-- TMPL_ELSE --><td><!-- /TMPL_IF -->
-							<!-- TMPL_VAR NAME="totalrow" -->
-						</td>
-					</tr>
-				<!-- /TMPL_LOOP NAME="looprow" -->
-				<tr >
-					<th>TOTAL</th>
-					<!-- TMPL_LOOP NAME="loopfooter" -->
-						<th>
-							<!-- TMPL_VAR NAME="totalcol" -->
-						</th>
-					<!-- /TMPL_LOOP -->
-					<th><!-- TMPL_VAR NAME="total" --></th>
-				</tr>
-		</table>
-	<!-- /TMPL_LOOP -->
+    <!-- TMPL_LOOP NAME="mainloop" -->
+        <h1>Issues statistics </h1>
+        <!-- TMPL_IF NAME="loopfilter" -->
+            <p>Filtered on</p>
+            <ul>
+            <!-- TMPL_LOOP NAME="loopfilter" -->
+                <li><!-- TMPL_IF NAME="err" -->  <!--/TMPL_IF --> <!-- TMPL_VAR NAME="crit"--> <!-- TMPL_VAR NAME="filter"--><!-- TMPL_IF NAME="err" -->  <!--/TMPL_IF --></li>
+            <!-- /TMPL_LOOP -->
+            </ul>
+        <!-- /TMPL_IF -->
+        
+        <table> 
+            <tr >
+                <th><!-- TMPL_VAR name="line" --> / <!-- TMPL_VAR name="column" --></th>
+                <!-- TMPL_LOOP NAME="loopcol" -->
+                    <th><!-- TMPL_VAR NAME="coltitle" --></th>
+                <!-- /TMPL_LOOP -->
+                <th>TOTAL</th>
+                </tr>
+                    <!-- TMPL_LOOP NAME="looprow" -->
+                        <tr>
+                            <!-- TMPL_IF NAME="hilighted" --><td class="hilighted"><!-- TMPL_ELSE --><td><!-- /TMPL_IF -->
+                            <!-- TMPL_VAR NAME="rowtitle" --></td>
+                            <!-- TMPL_LOOP NAME="loopcell" -->
+                                <!-- TMPL_IF NAME="hilighted" --><td><!-- TMPL_ELSE --><td><!-- /TMPL_IF -->
+                                <!-- TMPL_IF NAME="value" --><!-- TMPL_VAR NAME="value" -->
+                                <!-- TMPL_ELSE --> &nbsp;
+                                <!-- /TMPL_IF -->
+                                </td>
+                            <!-- /TMPL_LOOP -->
+                            <!-- TMPL_IF NAME="hilighted" --><td><!-- TMPL_ELSE --><td><!-- /TMPL_IF -->
+                                <!-- TMPL_VAR NAME="totalrow" -->
+                            </td>
+                        </tr>
+                        <!-- /TMPL_LOOP -->
+                        <tr >
+                            <th>TOTAL</th>
+                            <!-- TMPL_LOOP NAME="loopfooter" -->
+                                <th>
+                                    <!-- TMPL_VAR NAME="totalcol" -->
+                                </th>
+                            <!-- /TMPL_LOOP -->
+                            <th><!-- TMPL_VAR NAME="total" --></th>
+                        </tr>
+        </table>
+    <!-- /TMPL_LOOP -->
 <!-- TMPL_ELSE -->
-	<h1>Issues statistics </h1>
-	<form method="post">
-	<table>
-		<thead>
-			<tr>
-			<th><div>Title</th>
-			<th>Row</th>
-			<th>Column</th>
-			<th>Filter</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr class="hilighted">
-				<td>Period</td>
-				<td><input type="radio" name="Line" value="datetime" /></td>
-				<td><input type="radio" name="Column" value="datetime" /></td>
-				<td > From <input type="text" readonly="readonly" size="10" id="from" name="Filter" />
-							<img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" valign="top">
-								<script language="JavaScript" type="text/javascript">
-									function validate1(date) {
-										var day = date.getDate();
-										var month = date.getMonth() + 1;
-										var year = date.getFullYear();
-										var weekDay = date.getDay();
-										var dayMonth = month + '-' + day;
-										var dateString = year + '-' + month + '-' + day;
-										var dateTo = document.getElementById('to').value.split("-");
-										var limitDate = new Date(dateTo[0], (dateTo[1] - 1), dateTo[2]);
-										if (date > limitDate) {
-											return true;
-										} else {
-											return false;
-										}
-									}
-					
-									Calendar.setup(
-										{
-											inputField : "from",
-											ifFormat : "%Y-%m-%d",
-											button : "openCalendarFrom",
-											disableFunc : validate1,
-											dateStatusFunc : validate1
-										}
-									);
-								</script>
-					To <input readonly="readonly" size="10" id="to" name="Filter" value="" type="text" />
-						<img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" valign="top" border="0" hspace="0" vspace="0">
-							<script type="text/javascript">
-								function validate2(date) {
-									var day = date.getDate();
-									var month = date.getMonth() + 1;
-									var year = date.getFullYear();
-									var weekDay = date.getDay();
-									var dayMonth = month + '-' + day;
-									var dateString = year + '-' + month + '-' + day;
-									var dateFrom = document.getElementById('from').value.split("-");
-									var limitDate = new Date(dateFrom[0], (dateFrom[1] - 1), dateFrom[2]);
-									if (limitDate > date) {
-										return true;
-									} else {
-										return false;
-									}
-								}
-		
-								Calendar.setup(
-									{
-										inputField : "to",
-										ifFormat : "%Y-%m-%d",
-										button : "openCalendarTo",
-										disableFunc : validate2,
-										dateStatusFunc : validate2
-									}
-								);
-							</script>
-				</td>
-			</tr>
-			<tr class="hilighted"> 
-				<td>Type :<select name="PeriodTypeSel">
-					<option value ="issue">Issue</option>
-					<option value ="return">Return</option>
-					</select></td>
-				<td colspan="2">group by <select name="DisplayBy">
-					<option value="">None</option>
-					<option value ="1">Day of week</option>
-					<option value ="2">Month</option>
-					<option value ="3">Year</option>
-					</select>
-					
-				</td>
-				<td>
-					Select Day : <select name="PeriodDaySel">
-					<option value =""></option>
-					<option value ="Monday">Monday</option>
-					<option value ="Tuesday">Tuesday</option>
-					<option value ="Wednesday">Wednesday</option>
-					<option value ="Thursday">Thursday</option>
-					<option value ="Friday">Friday</option>
-					<option value ="Saturday">Saturday</option>
-					<option value ="Sunday">Sunday</option>
-					</select>
-					Select Month : <select name="PeriodMonthSel">
-					<option value =""></option>
-					<option value ="January">January</option>
-					<option value ="February">February</option>
-					<option value ="March">March</option>
-					<option value ="April">April</option>
-					<option value ="May">May</option>
-					<option value ="June">June</option>
-					<option value ="July">July</option>
-					<option value ="August">August</option>
-					<option value ="September">September</option>
-					<option value ="October">October</option>
-					<option value ="November">November</option>
-					<option value ="December">December</option>
-					</select>
-				</td>
-			</tr>
-			<tr >
-				<td>Borrower Category</td>
-				<td><input type="radio" name="Line" value="borrowers.categorycode" /></td>
-				<td><input type="radio" name="Column" value="borrowers.categorycode" /></td>
-				<td><!-- TMPL_VAR NAME="CGIBorCat" --></td>
-			</tr>
-			<tr class="hilighted">
-				<td>Document Type</td>
-				<td><input type="radio" name="Line" value="itemtype" /></td>
-				<td><input type="radio" name="Column" value="itemtype" /></td>
-				<td ><!-- TMPL_VAR NAME="CGIItemType" --></td>
-			</tr>
-			<tr>
-				<td>Branch</td>
-				<td><input type="radio" name="Line" value="branch" /></td>
-				<td><input type="radio" name="Column" value="branch" /></td>
-				<td><!-- TMPL_VAR NAME="CGIBranch" --></td>
-			</tr>
-			<!-- TMPL_IF Name="hassort1" -->
-				<tr class="hilighted"> 
-					<td>Sort1</td>
-					<td><input type="radio" name="Line" value="borrowers.sort1" /></td>
-					<td><input type="radio" name="Column" value="borrowers.sort1" /></td>
-					<td><!-- TMPL_VAR NAME="CGISort1" --> </td>
-				</tr>
-			<!-- /TMPL_IF -->
-			<!-- TMPL_IF Name="hassort2" -->
-				<!-- TMPL_IF Name="HglghtSort2"--><tr class="hilighted"> <!-- TMPL_ELSE --><tr><!--/TMPL_IF --> 
-					<td>Sort2</td>
-					<td><input type="radio" name="Line" value="borrowers.sort2" /></td>
-					<td><input type="radio" name="Column" value="borrowers.sort2" /></td>
-					<td><!-- TMPL_VAR NAME="CGISort2" --> </td>
-				</tr>
-			<!-- /TMPL_IF -->
-			<tr></tr>
-		</tbody>
-	</table>
-	
-	
-		<h3> Cell value </h3>
-			<p><input type="radio" name="Cellvalue" value="1" checked="checked" /> Count issues </p>
-			<p><input type="radio" name="Cellvalue" value="3" /> Circulation rate </p>
-	
-	
-		<h3> Output </h3>
-		<input type="radio" checked name="output" value="screen" /> To screen into the browser
-		
-		<input type="radio" name="output" value="file"> To file <input type="text" name="basename" value="Export" /> into an application  
-		<!-- TMPL_VAR NAME="CGIextChoice" -->
-		<!-- TMPL_VAR NAME="CGIsepChoice" -->
-	</p>
-	
-	<p>
-	<input type="submit" value="OK" />
-	<input type="hidden" name="report_name" value="<!--TMPL_VAR NAME="report_name" -->" />
-	<input type="hidden" name="do_it" value="1" />
-	</form>
+    <h1>Issues statistics </h1>
+    <form method="post">
+    <table>
+        <thead>
+            <tr>
+                <th><div>Title</th>
+                <th>Row</th>
+                <th>Column</th>
+                <th>Filter</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="hilighted">
+                <td>Period</td>
+                <td><input type="radio" name="Line" value="datetime" /></td>
+                <td><input type="radio" name="Column" value="datetime" /></td>
+                <td > From <input type="text" readonly="readonly" size="10" id="from" name="Filter" />
+                    <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" valign="top">
+                    <script language="JavaScript" type="text/javascript">
+                    function validate1(date) {
+                        var day = date.getDate();
+                        var month = date.getMonth() + 1;
+                        var year = date.getFullYear();
+                        var weekDay = date.getDay();
+                        var dayMonth = month + '-' + day;
+                        var dateString = year + '-' + month + '-' + day;
+                        var dateTo = document.getElementById('to').value.split("-");
+                        var limitDate = new Date(dateTo[0], (dateTo[1] - 1), dateTo[2]);
+                        if (date > limitDate) {
+                                return true;
+                        } else {
+                                return false;
+                        }
+                        }
+                    Calendar.setup(
+                        {
+                            inputField : "from",
+                            ifFormat : "%Y-%m-%d",
+                            button : "openCalendarFrom",
+                            disableFunc : validate1,
+                            dateStatusFunc : validate1
+                        }
+                    );
+                    </script>
+                    To <input readonly="readonly" size="10" id="to" name="Filter" value="" type="text" />
+                        <img src="<!-- TMPL_VAR Name="themelang" -->/includes/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" valign="top" border="0" hspace="0" vspace="0">
+                        <script type="text/javascript">
+                            function validate2(date) {
+                                var day = date.getDate();
+                                var month = date.getMonth() + 1;
+                                var year = date.getFullYear();
+                                var weekDay = date.getDay();
+                                var dayMonth = month + '-' + day;
+                                var dateString = year + '-' + month + '-' + day;
+                                var dateFrom = document.getElementById('from').value.split("-");
+                                var limitDate = new Date(dateFrom[0], (dateFrom[1] - 1), dateFrom[2]);
+                                if (limitDate > date) {
+                                        return true;
+                                } else {
+                                        return false;
+                                }
+                            }
+
+                            Calendar.setup(
+                                {
+                                    inputField : "to",
+                                    ifFormat : "%Y-%m-%d",
+                                    button : "openCalendarTo",
+                                    disableFunc : validate2,
+                                    dateStatusFunc : validate2
+                                }
+                            );
+                        </script>
+                    </td>
+                </tr>
+                <tr class="hilighted"> 
+                <td>Type :<select name="PeriodTypeSel">
+                    <option value ="issue">Issue</option>
+                    <option value ="return">Return</option>
+                    </select></td>
+                <td colspan="2">group by <select name="DisplayBy">
+                    <option value="">None</option>
+                    <option value ="1">Day of week</option>
+                    <option value ="2">Month</option>
+                    <option value ="3">Year</option>
+                    </select>
+                </td>
+                <td>
+                    Select Day : <select name="PeriodDaySel">
+                    <option value =""></option>
+                    <option value ="Monday">Monday</option>
+                    <option value ="Tuesday">Tuesday</option>
+                    <option value ="Wednesday">Wednesday</option>
+                    <option value ="Thursday">Thursday</option>
+                    <option value ="Friday">Friday</option>
+                    <option value ="Saturday">Saturday</option>
+                    <option value ="Sunday">Sunday</option>
+                    </select>
+                    Select Month : <select name="PeriodMonthSel">
+                    <option value =""></option>
+                    <option value ="January">January</option>
+                    <option value ="February">February</option>
+                    <option value ="March">March</option>
+                    <option value ="April">April</option>
+                    <option value ="May">May</option>
+                    <option value ="June">June</option>
+                    <option value ="July">July</option>
+                    <option value ="August">August</option>
+                    <option value ="September">September</option>
+                    <option value ="October">October</option>
+                    <option value ="November">November</option>
+                    <option value ="December">December</option>
+                    </select>
+                </td>
+        </tr>
+        <tr >
+            <td>Borrower Category</td>
+            <td><input type="radio" name="Line" value="borrowers.categorycode" /></td>
+            <td><input type="radio" name="Column" value="borrowers.categorycode" /></td>
+            <td><!-- TMPL_VAR NAME="CGIBorCat" --></td>
+        </tr>
+        <tr class="hilighted">
+            <td>Document Type</td>
+            <td><input type="radio" name="Line" value="itemtype" /></td>
+            <td><input type="radio" name="Column" value="itemtype" /></td>
+            <td ><!-- TMPL_VAR NAME="CGIItemType" --></td>
+        </tr>
+        <tr>
+            <td>Branch</td>
+            <td><input type="radio" name="Line" value="branch" /></td>
+            <td><input type="radio" name="Column" value="branch" /></td>
+            <td><!-- TMPL_VAR NAME="CGIBranch" --></td>
+        </tr>
+        <tr>
+            <td>Location</td>
+            <td><input type="radio" name="Line" value="location" /></td>
+            <td><input type="radio" name="Column" value="location" /></td>
+            <td><!-- TMPL_VAR NAME="CGILocation" --></td>
+        </tr>
+        <tr>
+            <td>Item Callnumber</td>
+            <td></td>
+            <td></td>
+            <td>From <input type="text" name="Filter" size="10"/> (included) to <input type="text" name="Filter" size="10" /> (excluded) </td>
+        </tr>
+        <!-- TMPL_IF Name="hassort1" -->
+            <tr class="hilighted"> 
+                    <td>Borrower sort1</td>
+                    <td><input type="radio" name="Line" value="borrowers.sort1" /></td>
+                    <td><input type="radio" name="Column" value="borrowers.sort1" /></td>
+                    <td><!-- TMPL_VAR NAME="CGISort1" --> </td>
+            </tr>
+        <!-- /TMPL_IF -->
+        <!-- TMPL_IF Name="hassort2" -->
+            <!-- TMPL_IF Name="HglghtSort2"--><tr class="hilighted"> <!-- TMPL_ELSE --><tr><!--/TMPL_IF --> 
+                <td>Borrower sort2</td>
+                <td><input type="radio" name="Line" value="borrowers.sort2" /></td>
+                <td><input type="radio" name="Column" value="borrowers.sort2" /></td>
+                <td><!-- TMPL_VAR NAME="CGISort2" --> </td>
+            </tr>
+        <!-- /TMPL_IF -->
+        <tr></tr>
+        </tbody>
+    </table>
+        <h3> Cell value </h3>
+            <p><input type="radio" name="Cellvalue" value="1" checked="checked" /> Count issues </p>
+            <p><input type="radio" name="Cellvalue" value="3" /> Circulation rate </p>
+        <h3> Output </h3>
+        <input type="radio" checked name="output" value="screen" /> To screen into the browser
+        <input type="radio" name="output" value="file"> To file <input type="text" name="basename" value="Export" /> into an application  
+        <!-- TMPL_VAR NAME="CGIextChoice" -->
+        <!-- TMPL_VAR NAME="CGIsepChoice" -->
+    </p>
+    <p>
+    <input type="submit" value="OK" />
+    <input type="hidden" name="report_name" value="<!--TMPL_VAR NAME="report_name" -->" />
+    <input type="hidden" name="do_it" value="1" />
+    </form>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
