--- a/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/moremember.tmpl
@@ -141,7 +141,7 @@
 <fieldset>
     <legend>Library use</legend>
     <p><label>Borrower number:</label><!-- TMPL_VAR NAME="borrowernumber" --></p>
-    <p><label>Category:</label><!-- TMPL_VAR NAME="categorycode" --></p>
+    <p><label>Category:</label><!-- TMPL_VAR NAME="description" --></p>
     <p><label>Registration date:</label><!-- TMPL_VAR NAME="dateenrolled" --></p>
     <p><label>Relation:</label><!-- TMPL_VAR NAME="relationship" --></p>
     
