Changing facets to dl in search page. facets header to dt.

--- a/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/includes/intranet.css
@@ -317,19 +317,34 @@ legend {
 }
 
 /* facets bloc */
-#facets {
+dl {
+    display:inline;
     float:right;
     margin-top: 15px;
     margin-left: 15px;
     border:1px solid #CCCCCC;
 }
 
-#facets h2 {
+dt {
     background-color:#CCCCCC;
     margin:0px;
     padding:0px;
     font-size:1.1em;
 }
+
+/* bulkedit bloc */
+/*#bulkedit {
+    margin-top: 15px;
+    margin-left: 15px;
+    border:1px solid #CCCCCC;
+}
+
+#bulkedit h2 {
+    background-color:#CCCCCC;
+    margin:0px;
+    padding:0px;
+    font-size:1.1em;
+}*/
 
 /* the USER information block */
 #librarian_information {
