bugfixes for acquisition module

--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/histsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/histsearch.tmpl
@@ -92,7 +92,7 @@
 				<tr>
 					<td>
 					    <!-- TMPL_IF NAME="invoicenumber" -->
-					        <a href="/cgi-bin/koha/acqui/parcel.pl?code=<!-- TMPL_VAR NAME="invoicenumber"-->&supplierid=<!-- TMPL_VAR NAME="id"-->&datereceived=<!-- TMPL_VAR NAME="datereceived" -->">Parcel</a>
+					        <a href="/cgi-bin/koha/acqui/parcel.pl?invoice=<!-- TMPL_VAR NAME="invoicenumber"-->&supplierid=<!-- TMPL_VAR NAME="id"-->&datereceived=<!-- TMPL_VAR NAME="datereceived" -->">Parcel</a>
 					    <!-- TMPL_ELSE -->
 					        &nbsp;
 					    <!-- /TMPL_IF -->
