--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/parcels.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/parcels.tmpl
@@ -84,7 +84,7 @@
         </td>
         <!-- TMPL_IF NAME="hilighted" --><td class="hilighted number"><!-- TMPL_ELSE --><td class="number">
         <!-- /TMPL_IF -->
-            <a href="/cgi-bin/koha/acqui/parcel.pl?type=intra&amp;supplierid=<!-- TMPL_VAR NAME="supplierid" ESCAPE=URL -->&amp;datereceived=<!-- TMPL_VAR NAME="raw_datereceived" ESCAPE=URL --><!--TMPL_IF Name="code"-->&amp;code=<!--TMPL_VAR Name="code" ESCAPE=URL --><!--/TMPL_IF-->">
+            <a href="/cgi-bin/koha/acqui/parcel.pl?type=intra&amp;supplierid=<!-- TMPL_VAR NAME="supplierid" ESCAPE=URL -->&amp;datereceived=<!-- TMPL_VAR NAME="raw_datereceived" ESCAPE=URL --><!--TMPL_IF Name="code"-->&amp;invoice=<!--TMPL_VAR Name="code" ESCAPE=URL --><!--/TMPL_IF-->">
                 <!-- TMPL_VAR NAME="datereceived" -->
             </a>
         </td>
